Added annotation capabilities to all rules and actions
git-svn-id: http://tps.ics.uci.edu/svn/projects/simse/trunk/simse@695 3eb8784e-3aee-0310-b028-d3d3d21a5a25